Update DOMRpcResult a bit
Use ContainerNode for result value and replace getErrors()/getResult()
with errors()/result().

This cleans up parlance a bit and makes the object model actually match
YANG RPCs.

JIRA: MDSAL-541
Change-Id: I0b1c0456385fd64eba06aa90580a7b56a5be0a86
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>